--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: -50px;
-  margin-left: 41px;
+  margin-left: 48%;
   width: 75px;
 }
 
