--- a/css/style.scss
+++ b/css/style.scss
@@ -451,7 +451,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: -50px;
-        margin-left: 41px;
+        margin-left: 48%;
         width: 75px;
     }
    
