--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,15 @@ body {
   font-weight: bold;
 }
 
+#closethere {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 998;
+}
+
 .subheader {
   margin: 0 auto;
   max-width: 1440px;
@@ -486,8 +495,8 @@ body {
 .slider-dots_item {
   background: url(../img/rhombus1.png);
   z-index: 1;
-  width: 20px;
-  height: 20px;
+  width: 19px;
+  height: 19px;
   cursor: pointer;
 }
 
@@ -511,6 +520,7 @@ body {
 
 .arrow_left img, .arrow_right img {
   margin-top: 25px;
+  margin-left: 12px;
 }
 
 .arrow_right {
