--- a/css/style.scss
+++ b/css/style.scss
@@ -137,6 +137,15 @@
         color: #f09d66;
         font-weight: bold;
     }    
+
+    #closethere {
+        position: absolute;
+        width:100%;
+        height:100%;
+        left:0;
+        top:0;
+        z-index: 998;
+    }
     
 // popUP - finish!!!   
     .subheader {
@@ -458,8 +467,8 @@
     .slider-dots_item {
         background: url(../img/rhombus1.png);
         z-index: 1;
-        width: 20px;
-        height: 20px;
+        width: 19px;
+        height: 19px;
         cursor: pointer;
     }
       
@@ -483,6 +492,7 @@
 
     .arrow_left img, .arrow_right img{
         margin-top: 25px;
+        margin-left: 12px;
     }
 
     .arrow_right {
